# CubicLauncher

./: .gitignore  Cargo.toml  README.md  VERSIONING.md  eslint.config.js  package.json  svelte.config.js  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
crates/ablage/: Cargo.toml
crates/ablage/examples/: test.rs
crates/ablage/src/: lib.rs
crates/aqua/examples/: download.rs
crates/aqua/src/: lib.rs
crates/aqua/src/downloaders/: batch.rs  fabric.rs  forge.rs  jre.rs  minecraft.rs  mod.rs
crates/aqua/src/errors/: mod.rs
crates/aqua/src/jre/: client.rs
crates/aqua/src/manifest/: mod.rs
crates/aqua/src/resolvers/: mod.rs
crates/aqua/src/types/: mod.rs
crates/aqua/src/utilities/: mod.rs
crates/communicator/examples/: basic_usage.rs
crates/communicator/src/: client.rs  models.rs
crates/cubrinth/src/mrpack/: installer.rs  mod.rs  pack_format.rs
crates/launchwerk/: Cargo.toml
crates/launchwerk/src/: error.rs  handle.rs  launchwerk.rs  lib.rs
crates/launchwerk/src/auth/: microsoft.rs  mod.rs  yggdrasil.rs
crates/launchwerk/src/models/: mod.rs
crates/zellkern/: Cargo.toml
crates/zellkern/src/: error.rs  forge.rs  launch_config.rs  lib.rs  loader.rs  manifest.rs  version.rs
crates/zellkern/src/resolvers/: classpath.rs  command.rs  mod.rs  natives.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  download.rs  forge.rs  ftb.rs  instance.rs  java.rs  log_window.rs  mod.rs  modrinth.rs  others.rs  pack.rs  settings.rs  themes.rs
src-tauri/src/commands/instance/: launch.rs  manage.rs  mod.rs  mods.rs  screens.rs
src-tauri/src/commands/themes/: mod.rs  v1.rs  v2.rs
src-tauri/src/core/: event_bus.rs  path_manager.rs
src-tauri/src/core/errors/: auth.rs  fs.rs  instance.rs  mod.rs
src-tauri/src/services/: addon_manager.rs  discord_presence.rs  download_queue.rs  instance_manager.rs  java_manager.rs  launcher.rs  mod.rs  settings_manager.rs
src-tauri/src/services/instance_manager/: data.rs  handle.rs  manager.rs  mod.rs  status.rs
src-tauri/src/theme_watcher/: mod.rs
src/lib/api/: cubicApi.ts  launcherService.ts  themeManager.ts  updaterServices.ts
src/lib/components/instances/: CreateInstanceModal.svelte  DownloadMods.svelte  FtbModpackBrowser.svelte  InstanceDetails.svelte  InstanceDrawer.svelte  InstanceView.svelte  ModsRow.svelte  ResourcePacksTab.svelte  ScreenshotsTab.svelte  StatusLog.svelte
src/lib/components/layout/: AuthModal.svelte  DownloadQueue.svelte  Drawer.svelte  Dropdown.svelte  ModalBase.svelte  Sidebar.svelte  UserMenu.svelte  VersionDownloader.svelte  YggdrasilModal.svelte  welcome.svelte
src/lib/i18n/: de.json  en.json  es.json  fr.json
src/lib/icons/: CheckIcon.svelte  ChevronDownIcon.svelte  ChevronIcon.svelte  CloseIcon.svelte  CopyIcon.svelte  Cubic.svelte  DownloadIcon.svelte  Lupa.svelte  Trash.svelte  logos.ts
src/lib/state/: state.svelte.ts
src/lib/types/: types.ts
src/routes/: +page.svelte
src/styles/: App.css
src/styles/shared/: components.css  reset.css  welcome.css
static/themes/dark/: dark.json
static/themes/lima/: lima.json
(+10 files in other folders)
