[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/aqua",
    "crates/launchwerk",
    "crates/communicator",
    "crates/cubrinth",
    "crates/zellkern",
    "crates/ablage",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = false
