[package]
name = "cubiclauncher"
version = "27.0.1"
description = "The open source Minecraft Launcher."
authors = ["Santiagolxx", "Not_staff"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cubite"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
aqua = { path = "../crates/aqua" }
launchwerk = { path = "../crates/launchwerk", features = ["auth"] }
directories = "6.0.0"
tokio = {version = "1.52.3", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
futures = "0.3.32"
zip = "8.6.0"
toml = "1.1.2"
base64 = "0.22.1"
infer = "0.19.0"
notify = "8"
dashmap = "6.2.1"
parking_lot = "0.12.5"
cubrinth = { path = "../crates/cubrinth" }
zellkern = { path = "../crates/zellkern" }
communicator = {path="../crates/communicator"}
compact_str = { version = "0.9.1", features = ["serde"] }
smallvec = "1.15.1"
ablage = { path = "../crates/ablage" }
postcard = { version = "1", features = ["use-std"] }
urlencoding = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
