[package]
name = "launchwerk"
version = "1.0.1"
edition = "2024"
authors = ["Santiagolxx", "CubicLauncher contributors"]
license = "AGPL-3.0-or-later"
description = "Minecraft launcher library for CubicLauncher"

[features]
default = []
auth = ["dep:reqwest", "dep:aes-gcm", "dep:rand", "dep:sha2", "dep:dirs", "dep:base64"]

[dependencies]
dashmap = "6.2.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
zellkern = { path = "../zellkern" }
zip = "8.6.0"
reqwest = { version = "0.13", features = ["blocking", "json", "form"], optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
dirs = { version = "6", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
env_logger = "0.11"
